syncing with original (#1)
* Put error message from inside the process into the exception that is thrown when the process doesn't start correctly. (#45846)

* update bwcVersions

* [DOCS] Reformat match query (#45152)

* Fix update-by-query script examples (#43907)

Two examples had swapped the order of lang and code when creating a
script.

Relates #43884

* Adjusting ML usage object serialization bwc version (#45874)

* Fsync translog without writeLock before rolling (#45765)

Today, when rolling a new translog generation, we block all write
threads until a new generation is created. This choice is perfectly 
fine except in a highly concurrent environment with the translog 
async setting. We can reduce the blocking time by pre-sync the 
current generation without writeLock before rolling. The new step 
would fsync most of the data of the current generation without 
blocking write threads.

Close #45371

* Add node.processors setting in favor of processors (#45855)

This commit namespaces the existing processors setting under the "node"
namespace. In doing so, we deprecate the existing processors setting in
favor of node.processors.

* Remove binary file accidentally committed

🤦‍♀️

* Fix TransportSnapshotsStatusAction ThreadPool Use (#45824)

In case of an in-progress snapshot this endpoint was broken because
it tried to execute repository operations in the callback on a
transport thread which is not allowed (only generic or snapshot
pool are allowed here).

* Enable testing against JDK 14 (#45178)

This commit enables testing against JDK 14.

* [DOCS] Add anchor to  version types list. (#45886)

* Adding a warning to from-size.asciidoc

Customers occasionally discover a known behavior in Elasticsearch's pagination that does not appear to be documented. This warning is intended to educate customers of this behavior while still highlighting alternative solutions.

* Remove redundant Java check from Sys V init (